[package]
name = "torrent-rs"
version = "0.1.0"
authors = ["Serge Barinov <bool.rus@gmail.com>"]
edition = "2018"

[features]
default = ['async-std/unstable', 'futures-util/io', 'futures-util/sink']

[dependencies]
bytes = '0.4.12'
nom = '5.0.1'
failure = '0.1.6'
failure_derive = '0.1.6'
async-trait = '0.1.17'
futures-util = '*'
bip_metainfo = '0.12.0'
async-std = '1.1.0'